Random word now gets called from Game.cs

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Hangman_Server.Models
 
-<h1>Your random word is: @RandomWordGenerator.Manager()</h1>
+<h1>Your random word is: @Game.Test()</h1>
 
